renaming html files

--- a/src/views/activities.html
+++ b/src/views/activities.html
@@ -69,13 +69,13 @@
             <div class="menu__list">
                 <li><a href="/src/views/student.html">Students</a></li>
                 <li><a href="/src/views/news.html">News</a></li>
-                <li><a href="/src/views/courses/courses.html">Courses</a></li>
-                <li class="press"><a href="/src/views/activity/actividades.html">Activities</a></li>
-                <li><a href="/src/views/resource/resource.html">Resources</a></li>
+                <li><a href="/src/views/courses.html">Courses</a></li>
+                <li class="press"><a href="/src/views/activities.html">Activities</a></li>
+                <li><a href="/src/views/resource.html">Resources</a></li>
                 <li><a href="">Certificates</a></li>
                 <li><a href="" class="space">Private Classes</a></li>
                 <div class="space-top">
-                    <li class="space2"><a href="/src/views/promotions/promotions.html">Offers</a></li>
+                    <li class="space2"><a href="/src/views/offers.html">Offers</a></li>
                     <li><a href="/src/views/menbership.html">Memberships</a></li>
                     <li><a href="/src/views/referrals.html">Referrals</a></li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
@@ -119,14 +119,15 @@
             <section id="modal-container-de">
                 <div class="modal-de modal-close-de">
                     <h3>Delete item</h3>
-                    <textarea name="cuadro" id="text-de" cols="30" rows="10" placeholder="Reason..." required></textarea>
+                    <textarea name="cuadro" id="text-de" cols="30" rows="10" placeholder="Reason..."
+                        required></textarea>
                     <button type="submit" class="close-de bnt-de">Yes, Delete</button>
                     <button class="close-de btn-de2">Cancel</button>
 
                 </div>
             </section>
         </form>
-        
+
         <section class="container-notify-succes sucesx alert" id="alert">
             <i class="fas fa-check-circle close-notify-succes"></i>
             <p class="parrafo-succes"></p>
