--- a/src/views/courses.html
+++ b/src/views/courses.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
@@ -60,17 +60,17 @@
                 <div>
                     <li><a href="/src/views/student.html">Students</a></li>
                     <li><a href="/src/views/news.html">News</a></li>
-                    <li class="press"><a href="/src/views/courses/courses.html">Courses</a></li>
-                    <li><a href="/src/views/activity/actividades.html">Activities</a></li>
-                    <li><a href="/src/views/resource/resource.html">Resources</a></li>
+                    <li class="press"><a href="/src/views/courses.html">Courses</a></li>
+                    <li><a href="/src/views/activities.html">Activities</a></li>
+                    <li><a href="/src/views/resource.html">Resources</a></li>
                     <li><a href="">Certificates</a></li>
                     <li><a href="" class="space">Private Classes</a></li>
 
                 </div>
                 <div class="space-top">
-                    <li class="space2"><a href="/src/views/promotions/promotions.html">Offers</a></li>
-                    <li><a href="/src/views/menbership.html"">Memberships</a></li>
-                                                                                 <li><a href=" /src/views/referrals.html">Referrals</a>
+                    <li class="space2"><a href="/src/views/offers.html">Offers</a></li>
+                    <li><a href="/src/views/menbership.html">Memberships</a></li>
+                    <li><a href=" /src/views/referrals.html">Referrals</a>
                     </li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
                     <li><a href="/src/views/index.html">Reviews</a>
@@ -100,7 +100,7 @@
                 <div class="close-course"><i class="fas fa-times-circle poi"></i></div>
                 <div class="cont-p-course">
                 </div>
-                    
+
         </section>
 
         <form class="form-delete" action="">
@@ -123,7 +123,7 @@
         </section>
 
 
-            <section id="container-noti">
+        <section id="container-noti">
             <div class="noti__idea"></div>
             <p class="noti__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deserunt eius,
                 animi fugiat debitis, id ipsa sint recusandae eum nobis odit sequi nihil dicta beatae qui eveniet
