--- a/src/views/news.html
+++ b/src/views/news.html
@@ -65,18 +65,16 @@
                 <div>
                     <li><a href="/src/views/student.html">Students</a></li>
                     <li class="press"><a href="/src/views/news.html">News</a></li>
-                    <li><a href="/src/views/courses/courses.html">Courses</a></li>
-                    <li><a href="/src/views/activity/actividades.html">Activities</a></li>
-                    <li><a href="/src/views/resource/resource.html">Resources</a></li>
+                    <li><a href="/src/views/courses.html">Courses</a></li>
+                    <li><a href="/src/views/activities.html">Activities</a></li>
+                    <li><a href="/src/views/resource.html">Resources</a></li>
                     <li><a href="">Certificates</a></li>
                     <li><a href="" class="space">Private Classes</a></li>
-
                 </div>
                 <div class="space-top">
-                    <li class="space2"><a href="/src/views/promotions/promotions.html">Offers</a></li>
+                    <li><a href="/src/views/offers.html">Offers</a></li>
                     <li><a href="/src/views/menbership.html">Memberships</a></li>
-                    <li><a href=" /src/views/referrals.html">Referrals</a>
-                    </li>
+                    <li><a href=" /src/views/referrals.html">Referrals</a> </li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
                     <li><a href="/src/views/index.html">Reviews</a>
 
