--- a/src/views/offers.html
+++ b/src/views/offers.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
@@ -27,7 +27,7 @@
                     <p class="crud-title-promotion font-title-promotion">Create new promotion</p>
                     <form action="" class="crud-form-promotion">
                         <input type="hidden" name="idi">
-                        
+
                         <input class="title-promotion" type="text" name="promotionTitle" placeholder="Prmotion name"
                             required>
 
@@ -43,19 +43,21 @@
                             <option>Technician</option>
                             <option>Assistant</option>
                         </select>
-                        <input class="input-DateStart-promotion" type="datetime-local" name="promotionDateStart" placeholder="Start Date*">
+                        <input class="input-DateStart-promotion" type="datetime-local" name="promotionDateStart"
+                            placeholder="Start Date*">
                         <input class="input-price-promotion" type="number" name="promotionPrice" placeholder="Price*">
                         <div>
                             <input class="input-DateEnd-promotion" type="datetime-local" name="promotionDateEnd"
                                 placeholder="Final Date*">
-                            </div>
-                            <input class="input-offer-promotion" type="text" name="promotionOffer" placeholder="Offer*">
+                        </div>
+                        <input class="input-offer-promotion" type="text" name="promotionOffer" placeholder="Offer*">
 
 
                         <div id="area-promotion">
-                            <textarea name="promotionDescription" class="txtarea-promotion" cols="30" rows="10"> </textarea>
+                            <textarea name="promotionDescription" class="txtarea-promotion" cols="30"
+                                rows="10"> </textarea>
                         </div>
-                        
+
                     </form>
                     <input id="create-promotion" type="submit" value="Create offer" class="btn-submit">
                     <input class="cancel-form" type="button" value="Cancel">
@@ -69,13 +71,13 @@
             <div class="menu__list">
                 <li><a href="/src/views/student.html">Students</a></li>
                 <li><a href="/src/views/news.html">News</a></li>
-                <li><a href="/src/views/courses/courses.html">Courses</a></li>
-                <li><a href="/src/views/activity/actividades.html">Activities</a></li>
-                <li><a href="/src/views/resource/resource.html">Resources</a></li>
+                <li><a href="/src/views/courses.html">Courses</a></li>
+                <li><a href="/src/views/activities.html">Activities</a></li>
+                <li><a href="/src/views/resource.html">Resources</a></li>
                 <li><a href="">Certificates</a></li>
                 <li><a href="" class="space">Private Classes</a></li>
                 <div class="space-top">
-                    <li class=" press"><a href="">Offers</a></li>
+                    <li class=" press"><a href="/src/views/offers.html">Offers</a></li>
                     <li><a href="/src/views/menbership.html">Memberships</a></li>
                     <li><a href=" /src/views/referrals.html">Referrals</a></li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
@@ -99,7 +101,7 @@
         <section class="cont-tables-promotion ">
             <div class="cont-table-promotion_blue">
                 <table class="crud-table-promotion table-promotion">
-            
+
                 </table>
             </div>
 
