--- a/src/views/resource.html
+++ b/src/views/resource.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    
+
     <div id="container">
 
         <section class="cont-new-resource open-form-resource">
@@ -55,7 +55,8 @@
                         </select>
 
                         <div id="area-resource">
-                            <textarea name="description" class="txtarea-resource" cols="30" rows="10" style="height: 500px;"> </textarea>
+                            <textarea name="description" class="txtarea-resource" cols="30" rows="10"
+                                style="height: 500px;"> </textarea>
                         </div>
                     </form>
                     <input id="create-resource" type="submit" value="Create resource" class="btn-submit">
@@ -70,13 +71,13 @@
             <div class="menu__list">
                 <li><a href="/src/views/student.html">Students</a></li>
                 <li><a href="/src/views/news.html">News</a></li>
-                <li><a href="/src/views/courses/courses.html">Courses</a></li>
-                <li><a href="/src/views/activity/actividades.html">Activities</a></li>
-                <li class=" press"><a href="/src/views/resource/resource.html">Resources</a></li>
+                <li><a href="/src/views/courses.html">Courses</a></li>
+                <li><a href="/src/views/activities.html">Activities</a></li>
+                <li class=" press"><a href="/src/views/resource.html">Resources</a></li>
                 <li><a href="">Certificates</a></li>
                 <li><a href="" class="space">Private classes</a></li>
                 <div class="space-top">
-                    <li><a href="/src/views/promotions/promotions.html">Offers</a></li>
+                    <li><a href="/src/views/offers.html">Offers</a></li>
                     <li><a href="/src/views/menbership.html">Memberships</a></li>
                     <li><a href=" /src/views/referrals.html">Referrals</a></li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
@@ -110,15 +111,16 @@
                 <div class="close-resource perr"><i class="fas fa-times-circle poi"></i></div>
                 <div class="cont-p-resource">
                 </div>
-                    
-                    
+
+
         </section>
 
         <form class="form-delete-dr" action="">
             <section id="modal-container-dr">
                 <div class="modal-dr modal-close-dr">
                     <h3>Delete item</h3>
-                    <textarea name="cuadro" id="text-dr" cols="30" rows="10" placeholder="Reason..." required></textarea>
+                    <textarea name="cuadro" id="text-dr" cols="30" rows="10" placeholder="Reason..."
+                        required></textarea>
                     <input type="submit" class="close-dr bnt-dr" value="Yes, Delete"></input>
                     <button class="close-dr btn-dr2">Cancel</button>
 
@@ -144,8 +146,8 @@
 
 
     </div>
-<!--     <script src="/src/js/index.js" type="module"></script> -->
-<script src="/src/js/resources/main-resurces.js" type="module"></script>
+    <!--     <script src="/src/js/index.js" type="module"></script> -->
+    <script src="/src/js/resources/main-resurces.js" type="module"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/d65d9c50b6.js" crossorigin="anonymous">
     </script>
